// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationKeys renders correctly 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <h1
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
      widget-type="InsightsPageHeaderTitle"
    >
      Activation Keys
    </h1>
    <div
      class="pf-c-content"
    >
      <p
        class=""
        data-ouia-component-id="OUIA-Generated-Text-1"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Organization ID: 
        123
      </p>
    </div>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <section
      class="pf-c-page__main-section pf-m-light"
    >
      <div
        class="pf-c-form__group pf-m-action"
      >
        <div
          class="pf-c-form__group-control"
        >
          <div
            class="pf-c-form__actions"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-primary"
              data-ouia-component-id="OUIA-Generated-Button-primary-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Create activation key
            </button>
          </div>
        </div>
      </div>
      <div>
        Activation Keys Table
      </div>
    </section>
  </section>
</div>
`;

exports[`ActivationKeys when the user call fails renders an error message when user call fails 1`] = `
<div>
  <div>
    Unavailable
  </div>
</div>
`;

exports[`ActivationKeys when the user does not have proper permissions redirects to not authorized page 1`] = `
<div>
  <div>
    Not Authorized
  </div>
</div>
`;
